my_nextcloud/traefik_config.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-buffering-middleware
  namespace: default
spec:
  buffering:
      # リクエストボディの最大サイズ (32GB)
      maxRequestBodyBytes: 34359738368
      # メモリ上にキャッシュする最大サイズ (32GB)
      maxResponseBodyBytes: 34359738368
