my_nextcloud/code-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-code-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 9980
  selector:
    app: my-nextcloud
    tier: office
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-code-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: office
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: office
    spec:
      containers:
        - image: collabora/code:24.04.6.1.1
          name: code
          ports:
            - containerPort: 9980
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi

########################
#url
#http://nextcloud-code-service.default.svc.cluster.local:9980
