my_nextcloud/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 3306
  selector:
    app: my-nextcloud
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mariadb-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: db
    spec:
      containers:
        - image: mariadb:lts
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
          volumeMounts:
            - name: nextcloud-data-persistent-storage
              mountPath: /var/lib/mysql #/var/lib/mariadb
              subPath: db
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "250m"
              memory: 512Mi
      volumes:
        - name: nextcloud-data-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-data-pv-claim
