my_nextcloud/nextcloud-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 9000
      # targetPort: 9000
      # protocol: TCP
  selector:
    app: my-nextcloud
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: backend
    spec:
      containers:
        - image: nextcloud:fpm
          name: nextcloud
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: nextcloud-data-persistent-storage
              mountPath: /var/www/html
              subPath: data
            - name: post-upgrade-script-file
              mountPath: /docker-entrypoint-hooks.d/post-upgrade/
            - name: post-installation-script-file
              mountPath: /docker-entrypoint-hooks.d/post-installation/
          resources:
            limits:
              cpu: "1"
              memory: 6Gi
            requests:
              cpu: "1"
              memory: 6Gi
      volumes:
        - name: nextcloud-data-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-data-pv-claim
        - name: post-upgrade-script-file
          configMap:
            name: post-upgrade-script
            items:
              - key: post-upgrade.sh
                path: post-upgrade.sh
                mode: 0755
        - name: post-installation-script-file
          configMap:
            name: post-installation-script
            items:
              - key: post-installation.sh
                path: post-installation.sh
                mode: 0755
