my_nextcloud/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nginx-service
  labels:
    app: my-nextcloud
  # annotations:
  #   metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 80
      # targetPort: 80
      # protocol: TCP
  selector:
    app: my-nextcloud
    tier: prox-nextcloud
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-nginx-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: prox-nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: prox-nextcloud
    spec:
      containers:
        - image: nginx:stable
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-data-persistent-storage
              mountPath: /var/www/html
              subPath: data
              readOnly: true
            - name: nextcloud-nginx-config
              mountPath: /etc/nginx/conf.d/
          resources:
            limits:
              cpu: "500m"
              memory: 6Gi
            requests:
              cpu: "250m"
              memory: 1Gi
      volumes:
        - name: nextcloud-data-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-data-pv-claim
        - name: nextcloud-nginx-config # volumeMountsで/etc/nginxにmountするやつ
          configMap:
            name: nextcloud-nginx-conf # ConfigMapのnginx-confを/etc/nginx以下に配置する
