my_nextcloud/nginx_code-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-nginx-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: my-nextcloud
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-nginx-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: frontend
    spec:
      containers:
        - image: nginx:stable
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: code-nginx-config
              mountPath: /etc/nginx/conf.d/
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: code-nginx-config # volumeMountsで/etc/nginxにmountするやつ
          configMap:
            name: code-nginx-conf # ConfigMapのnginx-confを/etc/nginx以下に配置する
