my_nextcloud/office-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-office-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 9980
  selector:
    app: my-nextcloud
    tier: office
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-office-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: office
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: office
    spec:
      containers:
        - image: collabora/code:latest
          name: office
          ports:
            - containerPort: 9980
          resources:
            limits:
              cpu: "250m"
              memory: 1.5Gi
            requests:
              cpu: "250m"
              memory: 1.5Gi
########################
#設定用url
#https://office.oahs.f5.si/browser/dist/admin/admin.html
