my_nextcloud/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    #
    cert-manager.io/cluster-issuer: "my-cluster-issuer"
    #
    traefik.ingress.kubernetes.io/service.serverstransport: nextcloud-traefik-config@kubernetescrd
    # nginx.ingress.kubernetes.io/proxy-body-size: "32G"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy_buffering: "off"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # ドメイン記載
        - nextcloud.oahs.f5.si
        - office.oahs.f5.si
      secretName: my-cluster-issuer-secret # cert-managerはこのシークレットに作成した証明書を格納する
  rules:
    - host: atsushi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-nginx-service
                port:
                  number: 80
    - host: nextcloud.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-nginx-service
                port:
                  number: 80
    - host: office.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-office-nginx-service
                port:
                  number: 80
